--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.417.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-faq-component": "^1.3.4",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^2.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
